--- a/gradle.properties
+++ b/gradle.properties
@@ -7,22 +7,22 @@ org.gradle.configuration-cache=true
 
 #read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-parchment_minecraft_version=1.21.4
-parchment_mappings_version=2025.01.05
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
-minecraft_version=1.21.4
+minecraft_version=1.21.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21.4, 1.22)
+minecraft_version_range=[1.21.1]
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.4.52-beta
+neo_version=21.1.219
 # The Neo version range can use any version of Neo as bounds
-neo_version_range=[21.4.0-beta,)
+neo_version_range=[21.1.0,)
 # The loader version range can only use the major version of FML as bounds
-loader_version_range=[4,)
+loader_version_range=[1,)
 
 ## Mod Properties
 
@@ -34,12 +34,12 @@ mod_name=Broken Tool Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=WTFL
 # The mod version. See https://semver.org/
-mod_version=1.21.4
+mod_version=1.21.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=co.lemee.brokentoolmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Jean-Baptiste Lemée
+mod_authors=Jean-Baptiste Lemï¿½e
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=A mod that replace tools as they break. It will attempt to find a tool made of the same material first. If none are found, it will replace it with the first tool of the same type found in the inventory.
